# Auto-PyTorch

./: .codecov.yml  .coveragerc  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .test_ensemble.py.swp  .travis.yml  Auto-PyTorch Trials.ipynb  CITATION.cff  Dockerfile  FastCifar10.ipynb  LICENSE  MANIFEST.in  README.md  README_APT.md  bench.sh  benchmark_datasets.txt  callback_example.py  codecov.yml  combine_benchmarks.py  config_1.json  create_benchmark.py  create_benchmark.sh  create_ensemble.py  create_trajectory.py  ensembles_nonada.sh  experiment_run.sh  fast-cifar.py  index.html  job_main_exp.sh  memo.txt  my_job.sh  no_regularization.txt  openml_experiment.py  openml_learning_curves.sh  openml_learning_curves_step_logging.sh  optional-requirements.txt  private_test.ipynb  requirements.txt  (+11 more)
.binder/: postBuild
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
arlind_refactor_development_regularization_cocktails/: extending.html  index.html  installation.html  objects.inv  releases.html  search.html  searchindex.js
autoPyTorch/: __init__.py  __version__.py  constants.py  constants_forecasting.py
autoPyTorch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
autonet/: __init__.py
baselines/: autosklearn_experiment.py  main_experiment.py  refit_experiment.py  utilities.py  worker.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
ci_scripts/: install.sh  install_env.sh  test.sh
cicd/: README.md  test_preselected_configs.py
datasets/: CIFAR10.csv  example.csv
development/: .buildinfo  (+11 more)
(+1537 files in other folders)
