[metadata]
description-file = README.md

[flake8]
application-import-names = autoPyTorch
max-line-length = 120
ignore = W605,E402,W503
show-source = True

[mypy]
ignore_missing_imports = True
follow_imports=skip
disallow_untyped_decorators = True
disallow_incomplete_defs = True
disallow_untyped_defs = True